Edited news to include link to pitch youtube video

--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
 
       <div class="span4">
 			<img src="img/Create.jpg"/ class="img-fea">
-        <h2>Create</h2>
+        <h2>Describe</h2>
         <p>
-            The IoT Tool Set supports you in creating information models which conform to the meta-model.
+            The IoT Tool Set lets you describe real world devices with a simple Information Model Language.
         </p>
       </div>
 
@@ -234,9 +234,9 @@
 
       <div class="span4">
 		<img src="img/Generate.jpg" class="img-fea"/>
-        <h2>Generate</h2>
+        <h2>Integrate</h2>
         <p>
-            Code generators transform information models into platform specific representations.
+            Information Models and thus devices can be integrated into any platform using Code generators.
         </p>
       </div>
   </div>
