fixed menu navigation on mobiles in homepage

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 			<img src="img/Create.jpg"/ class="img-fea">
         <h2>Describe</h2>
         <p>
-            The IoT Tool Set lets you describe real world devices with a simple Information Model Language.
+            The IoT Tool Set lets you describe your devices using Information Models.
         </p>
       </div>
 
@@ -228,7 +228,7 @@
 			<img src="img/Share.jpg"/>
         <h2>Share</h2>
         <p>
-            The Repository allows to manage, share and reuse existing information models. 
+            The Repository allows to manage, share and reuse existing Information Models. 
         </p>    
       </div>
 
@@ -236,7 +236,7 @@
 		<img src="img/Generate.jpg" class="img-fea"/>
         <h2>Integrate</h2>
         <p>
-            Information Models and thus devices can be integrated into any platform using Code generators.
+            Code Generators for Information Models let you integrate devices into different platforms.
         </p>
       </div>
   </div>
