--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Vorto</title>
+    <title>Eclipse Vorto - IoT Toolset for standardized device descriptions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
+      <link href="css/lightbox.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet"> 
     
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -24,6 +25,16 @@
    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/docs.min.js"></script>  
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61866024-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
       
   </head>
   <body>
@@ -42,7 +53,7 @@
                     <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a>
                     <div class="nav-collapse collapse navbar-responsive-collapse">
                     <ul class="nav">
-						<li><a href="about.html">About</a></li>
+						            <li><a href="about.html">About</a></li>
                         <li><a href="news.html">News</a></li>
                         <li><a href="documentation.html">Documentation</a></li>
                         <li><a href="downloads.html">Downloads</a></li>
@@ -80,7 +91,7 @@
 
                  <div class="carousel-caption">
                       <h1>What is <strong>Vorto</strong>?</h1>
-                      <p class="lead"><strong>Vorto</strong> is an open source tool that allows for creating and managing technology agnostic, abstract device descriptions, so called information models. Information models describe the attributes and the capabilities of real world devices. These information models can be managed and shared within the Vorto repository. In addition Vorto provides a code generator extension point where code generators can be plugged in. </p>
+                      <p class="lead"><strong>Vorto</strong> is an open source tool that allows to create and manage technology agnostic, abstract device descriptions, so called information models. Information models describe the attributes and the capabilities of real world devices. These information models can be managed and shared within the Vorto repository. In addition Vorto provides a code generator extension point where code generators can be plugged in. </p>
                       <a class="btn btn-large btn-primary" href="downloads.html">Download Now</a>
                 </div>
 
@@ -205,7 +216,7 @@
   </div>
     <!-- /Carousel -->
 
-  <div class="hr-divider"></div>
+  <div class="hr-divider2"></div>
 
 <!-- Feature 
   ==============================================-->
@@ -217,7 +228,21 @@
       </div>
 
       <div class="span4">
-			<img src="img/Create.jpg"/ class="img-fea">
+        <!--div class="thumb">
+        <a href="#vid1" title="click to view video"-->
+             <img src="img/Create.jpg" class="img-fea">
+             <!--div class="zoom"></div>
+        </a>
+      </div>
+        <div>
+          <a href="#_" class="lightbox" id="vid1" title="click to return">
+          <video controls class="lb">
+            <source src="videos/Vorto-ver4.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video>
+          <div class="lb_close"></div>
+        </a>
+      </div-->
         <h2>Describe</h2>
         <p>
             The IoT Tool Set lets you describe your devices using Information Models.
@@ -244,7 +269,6 @@
 
 <!-- /.Feature -->
 
-  <div class="hr-divider"></div>
 
 <!-- Row View -->
 
