--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Vorto</title>
+  <title>Eclipse Vorto - IoT Toolset News</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -11,6 +11,7 @@
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
+	<link href="css/lightbox.css" rel="stylesheet">
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
@@ -22,6 +23,16 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/docs.min.js"></script>  
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61866024-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
@@ -80,17 +91,76 @@
   <!-- /. PAGE TITLE-->
   	<div class="row">
 	  <div class="span12">
-	  <h3>New updates available</h3>
+	  <h3>IoT Asia 2015, Singapore</h3>
 
 	
 			<div class="postmetadata">
-					<ul>
+				<ul>
+					<li>
+						 <i class="icon-calendar"></i>March 08th - 9th, 2015
+					</li>
+				</ul>
+			</div>
 
-							<li>
-								 <i class="icon-calendar"></i>February 04th, 2015
-							</li>
-					</ul>
-				</div>
+			<p>
+			    At the <a href="http://www.internetofthingsasia.com/events/iot-asia-2015/event-summary-2fae431387124a1d9981c93c3f9e87dc.aspx#3" target="_blank">IoT Asia 2015</a>, Vorto shared an exhibition booth, inviting various visitors, from around the world, to Vorto tech talks in order to find out
+				more about the concepts and ideas behind it. It was a successful event with many interested attendees at the Vorto booth curious to understand Vorto and IoT. </p>
+				<p> Here are few captures from the event. </p>
+			
+			<div>
+				<a href="#img1" title="click to view higher resolution" class="zoomed">
+					<img src="img/news/iotasia2015/Vorto_Panel.jpg" style="width:15%;height:15%;margin-top:0px;"/>
+				</a>
+					<a href="#img2" title="click to view higher resolution" class="zoomed">
+					<img src="img/news/iotasia2015/Vorto_Panel2.jpg" style="width:15%;height15%;margin-top:0px;"/>
+				</a>
+				<a href="#img3" title="click to view higher resolution" class="zoomed">
+					<img src="img/news/iotasia2015/Vorto_Talk.jpg" style="width:34%;height:34%;margin-top:0px;"/>
+				</a>
+
+				<!-- lightbox container hidden with CSS -->
+				<div><a href="#_" class="lightbox" id="img1" title="click to return">
+					<img class="lb" src="img/news/iotasia2015/Vorto_Panel.jpg"/>
+					<div class="lb_close"></div>
+				</a>
+			</div>
+
+
+				<!-- lightbox container hidden with CSS -->
+				<div><a href="#_" class="lightbox" id="img2" title="click to return">
+					<img class="lb" src="img/news/iotasia2015/Vorto_Panel2.jpg"/>
+					<div class="lb_close"></div>
+				</a>
+			</div>
+		
+
+				<!-- lightbox container hidden with CSS -->
+				<div><a href="#_" class="lightbox" id="img3" title="click to return">
+					<img class="lb" src="img/news/iotasia2015/Vorto_Talk.jpg"/>
+					<div class="lb_close"></div>
+				</a>
+			</div>
+
+			
+		</div>
+	  </div>
+	 </div>
+
+	 
+  <div class="hr-divider"></div>
+	 
+	 <div class="row">
+	  <div class="span12">
+	  <h3>Eclipse Conference 2015, San Francisco</h3>
+
+	
+			<div class="postmetadata">
+				<ul>
+					<li>
+						 <i class="icon-calendar"></i>February 04th, 2015
+					</li>
+				</ul>
+			</div>
 
 			<p>
 			    Two interesting talks around the Vorto project are going to be held at the Eclipse Conference North America from the 9th until the 12th of March 2015.
@@ -105,16 +175,16 @@
 					</li>
 					<li><a href="https://www.eclipsecon.org/na2015/session/mastering-diversity-smart-homes-practical-approach">Mastering the Diversity in Smart Homes - A Practical Approach</a></li>
 				</ul>
-			</p>			
-		
-
+			</p>
+			
 	  </div>
 	 </div>
 
 
 </div>
 
-
+ </div>
+  </div>
 <!--Footer
 ==========================-->
 
