fixed pictures in news of iotasia

--- a/news.html
+++ b/news.html
@@ -109,18 +109,18 @@
 			
 			<div>
 				<a href="#img1" title="click to view higher resolution" class="zoomed">
-					<img src="img/news/iotasia2015/Vorto_Panel.jpg" style="width:15%;height:15%;margin-top:0px;"/>
+					<img src="img/news/iotasia2015/Vorto_Panel.JPG" style="width:15%;height:15%;margin-top:0px;"/>
 				</a>
 					<a href="#img2" title="click to view higher resolution" class="zoomed">
 					<img src="img/news/iotasia2015/Vorto_Panel2.jpg" style="width:15%;height15%;margin-top:0px;"/>
 				</a>
 				<a href="#img3" title="click to view higher resolution" class="zoomed">
-					<img src="img/news/iotasia2015/Vorto_Talk.jpg" style="width:34%;height:34%;margin-top:0px;"/>
+					<img src="img/news/iotasia2015/Vorto_Talk.JPG" style="width:34%;height:34%;margin-top:0px;"/>
 				</a>
 
 				<!-- lightbox container hidden with CSS -->
 				<div><a href="#_" class="lightbox" id="img1" title="click to return">
-					<img class="lb" src="img/news/iotasia2015/Vorto_Panel.jpg"/>
+					<img class="lb" src="img/news/iotasia2015/Vorto_Panel.JPG"/>
 					<div class="lb_close"></div>
 				</a>
 			</div>
@@ -136,7 +136,7 @@
 
 				<!-- lightbox container hidden with CSS -->
 				<div><a href="#_" class="lightbox" id="img3" title="click to return">
-					<img class="lb" src="img/news/iotasia2015/Vorto_Talk.jpg"/>
+					<img class="lb" src="img/news/iotasia2015/Vorto_Talk.JPG"/>
 					<div class="lb_close"></div>
 				</a>
 			</div>
