Added Youtube video link for describing devices

--- a/index.html
+++ b/index.html
@@ -228,21 +228,21 @@
       </div>
 
       <div class="span4">
-        <!--div class="thumb">
-        <a href="#vid1" title="click to view video"-->
-             <img src="img/Create.jpg" class="img-fea">
-             <!--div class="zoom"></div>
+        <div class="thumb">
+        <a href="#vid1" title="click to view video">
+             <img src="img/Create.jpg" class="img-fea" >
+             <div class="zoom"></div>
         </a>
+		
       </div>
         <div>
           <a href="#_" class="lightbox" id="vid1" title="click to return">
-          <video controls class="lb">
-            <source src="videos/Vorto-ver4.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-            </video>
+           
+		   <iframe width="560" height="315" src="https://www.youtube.com/embed/hdHwyc6vMlQ" frameborder="0" allowfullscreen></iframe>
           <div class="lb_close"></div>
+
         </a>
-      </div-->
+      </div>
         <h2>Describe</h2>
         <p>
             The IoT Tool Set lets you describe your devices using Information Models.
