Added Code Generator you tube video

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       </div>
 
       <div class="span4">
-        <div class="thumb">
+        <div class="thumb1">
         <a href="#vid1" title="click to view video">
              <img src="img/Create.jpg" class="img-fea" >
              <div class="zoom"></div>
@@ -258,7 +258,22 @@
       </div>
 
       <div class="span4">
-		<img src="img/Generate.jpg" class="img-fea"/>
+	  <div class="thumb2">
+        <a href="#vid2" title="click to view video">
+             <img src="img/Generate.jpg" class="img-fea" >
+             <div class="zoom"></div>
+        </a>
+		
+      </div>
+        <div>
+          <a href="#_" class="lightbox" id="vid2" title="click to return">
+           
+		   <iframe width="560" height="315" src="https://www.youtube.com/embed/wWh22q_ygRw" frameborder="0" allowfullscreen></iframe>
+          <div class="lb_close"></div>
+
+        </a>
+      </div>
+		
         <h2>Integrate</h2>
         <p>
             Code Generators for Information Models let you integrate devices into different platforms.
