--- a/news.html
+++ b/news.html
@@ -168,12 +168,15 @@
 				The second talk covers practical insights about the Eclipse Smarthome Platform - among others, how Vorto information models can be used to integrate new devices into the Smart Home platform.
 				For further information about the content of the presentation, check out the link below. 
 				<ul>
-					<li><a href="https://www.eclipsecon.org/na2015/session/vorto-project-advanced-device-integration">The Vorto Project - Advanced Device Integration</a>
+					<li><a href="https://www.eclipsecon.org/na2015/session/vorto-project-advanced-device-integration" target="_blank">The Vorto Project - Advanced Device Integration</a>
 					<p>
 					Speaker Pitch Video about Vorto: <a href="https://www.youtube.com/watch?v=JgpBzZs_A6k">Watch Video</a>
 					</p>
 					</li>
-					<li><a href="https://www.eclipsecon.org/na2015/session/mastering-diversity-smart-homes-practical-approach">Mastering the Diversity in Smart Homes - A Practical Approach</a></li>
+					<li><a href="https://www.eclipsecon.org/na2015/session/mastering-diversity-smart-homes-practical-approach" target="_blank">Mastering the Diversity in Smart Homes - A Practical Approach</a></li>
+					<p>
+					How Eclipse SmartHome can benefit from Vorto? <a href="http://www.infoq.com/presentations/eclipse-smarthome-vorto">Watch Video</a>
+					</p>
 				</ul>
 			</p>
 			
