--- a/community.html
+++ b/community.html
@@ -57,6 +57,7 @@
                         <li><a href="documentation.html">Documentation</a></li>
                         <li><a href="downloads.html">Downloads</a></li>
                         <li><a href="blog.html">Blog</a></li>
+						<li><a href="https://wiki.eclipse.org/Vorto" target="_blank">Wiki</a></li>
                         <li class="active"><a href="community.html">Community</a></li>
                     </ul>
                   </div>
