Replaced Documentation link with Github documentation

--- a/news.html
+++ b/news.html
@@ -55,7 +55,7 @@
                     <ul class="nav">
 						<li><a href="about.html">About</a></li>
                         <li class="active"><a href="news.html">News</a></li>
-                        <li><a href="documentation.html">Documentation</a></li>
+                        <li><a href="https://github.com/eclipse/vorto/blob/master/docs/VortoUserGuide_en/vorto_user_guide_en.md">Documentation</a></li>
                         <li><a href="downloads.html">Downloads</a></li>
                         <li><a href="blog.html">Blog</a></li>
 						<li><a href="https://wiki.eclipse.org/Vorto" target="_blank">Wiki</a></li>
@@ -88,6 +88,33 @@
 
 		</div>
 	</div>
+	
+	<div class="row">
+	  <div class="span12">
+	  <h3>Eclipse Vorto 0.3 has been released</h3>
+
+	
+			<div class="postmetadata">
+				<ul>
+					<li>
+						 <i class="icon-calendar"></i>July 08th, 2015
+					</li>
+				</ul>
+			</div>
+
+			<p>
+			    We can proudly announce that <b>Eclipse Vorto 0.3</b> has been released today and is available on <a href="https://github.com/eclipse/vorto">Github</a>
+				<br>
+				It features the following core functionality:
+				<ul>
+					<li>A simple Information Model language to define devices with their properties and services</li>
+					<li>Example Code Generators that create platform - specific representations from information models</li>
+					<li>Information Model Repository that allows you to search and download models from a web-based interface</li>
+				</ul>
+			</p>
+			
+	  </div>
+	 </div>
 
   <!-- /. PAGE TITLE-->
   	<div class="row">
