--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                     <ul class="nav">
 						<li class="active"><a href="about.html">About</a></li>
                        	<li><a href="news.html">News</a></li>
-                        <li><a href="documentation.html">Documentation</a></li>
+                        <li><a href="https://github.com/eclipse/vorto/blob/master/docs/VortoUserGuide_en/vorto_user_guide_en.md">Documentation</a></li>
                         <li><a href="downloads.html">Downloads</a></li>
                         <li><a href="blog.html">Blog</a></li>
 						<li><a href="https://wiki.eclipse.org/Vorto" target="_blank">Wiki</a></li>
