--- a/downloads.html
+++ b/downloads.html
@@ -56,7 +56,7 @@
                     <ul class="nav">
 						<li><a href="about.html">About</a></li>
                     	<li><a href="news.html">News</a></li>
-                        <li><a href="documentation.html">Documentation</a></li>
+                        <li><a href="https://github.com/eclipse/vorto/blob/master/docs/VortoUserGuide_en/vorto_user_guide_en.md">Documentation</a></li>
                         <li class="active"><a href="downloads.html">Downloads</a></li>
                         <li><a href="blog.html">Blog</a></li>
 						<li><a href="https://wiki.eclipse.org/Vorto" target="_blank">Wiki</a></li>
@@ -99,7 +99,7 @@
 					<h3 class="media-heading">
 						<b>Source Code</b>
 					</h3>
-					The source code for Eclipse Vorto is available <a href="http://git.eclipse.org/c/vorto/org.eclipse.vorto.git/">here</a>
+					The source code for Eclipse Vorto is available on Github <a href="https://github.com/eclipse/vorto">here</a>
 				</div>
 			</div>
 		</div>	
