Added Link to new Update Site location

--- a/update/index.html
+++ b/update/index.html
@@ -5,9 +5,8 @@
 		<div style="max-width: 900px;">
 			<hr>
 			<img src="http://download.eclipse.org/eclipse.org-common/themes/Nova/images/eclipse.png" style="float: right; ">
-			<h1>This is an Eclipse Update Site</h1>
-			To install the software hosted on this site, please use the Eclipse Update Manager.<br>
-			To learn how to install software from an update site, please carefully read <a href="http://help.eclipse.org/indigo/index.jsp?topic=/org.eclipse.platform.doc.user/tasks/tasks-127.htm">Adding a new software site</a> from Eclipse Online-Help and follow the instructions there.
+			<h1>Update Site has moved</h1>
+			Please click <a href="http://download.eclipse.org/vorto/update/releases/0.3.0/">here</a> to get to the new Update Site location.
 			<br style="clear: both;">
 			<hr>
 		</div>
