changed type in news

--- a/news.html
+++ b/news.html
@@ -103,7 +103,7 @@
 			</div>
 
 			<p>
-			    We can proudly announce that <b>Eclipse Vorto 0.3</b> has been released today and is available on <a href="https://github.com/eclipse/vorto">Github</a>
+			    We can proudly announce that <b>Eclipse Vorto 0.3</b> is now available on <a href="https://github.com/eclipse/vorto">Github</a>
 				<br>
 				It features the following core functionality:
 				<ul>
