--- a/news.html
+++ b/news.html
@@ -91,7 +91,7 @@
 	
 	<div class="row">
 	  <div class="span12">
-	  <h3>Eclipse Vorto 0.3 has been released</h3>
+	  <h3>Eclipse Vorto 0.3</h3>
 
 	
 			<div class="postmetadata">
