Pointing to milestone update site under downloads

--- a/downloads.html
+++ b/downloads.html
@@ -128,7 +128,7 @@
 		<div class="span6">
 
 		<div class="media">
-				 <a href="http://download.eclipse.org/vorto/update/releases/0.3.0/" class="pull-left"><img src="img/icon-service1.png" class="media-object" alt='' /></a>
+				 <a href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/" class="pull-left"><img src="img/icon-service1.png" class="media-object" alt='' /></a>
 				<div class="media-body">
 					<h3 class="media-heading">
 						<b>Vorto Update Site</b>
@@ -136,7 +136,7 @@
 					<p>
 						Install Vorto using the Standard Eclipse Update mechanism:
 						<br>
-						Choose <b>Help -> Install New Software...</b> from the menu bar and Add... Insert the update site URL  <a href="http://download.eclipse.org/vorto/update/releases/0.3.0/">Vorto Update Site</a>
+						Choose <b>Help -> Install New Software...</b> from the menu bar and Add... Insert the update site URL  <a href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/">Vorto Update Site</a>
 						Select the components of your choice and complete the wizard by clicking the Next button until you can click Finish.
 						After a quick download and a restart of Eclipse, Vorto is ready to be used.
 					</p>
