--- a/news.html
+++ b/news.html
@@ -91,7 +91,7 @@
 	
 	<div class="row">
 	  <div class="span12">
-	  <h3>Eclipse Vorto 0.3</h3>
+	  <h3>Eclipse Vorto on Github</h3>
 
 	
 			<div class="postmetadata">
@@ -103,7 +103,7 @@
 			</div>
 
 			<p>
-			    We can proudly announce that <b>Eclipse Vorto 0.3</b> is now available on <a href="https://github.com/eclipse/vorto">Github</a>
+			    We can proudly announce that <b>Eclipse Vorto</b> is now available on <a href="https://github.com/eclipse/vorto">Github</a>
 				<br>
 				It features the following core functionality:
 				<ul>
