Added link to vorto repository

--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
                         <li><a href="blog.html">Blog</a></li>
 						<li><a href="https://wiki.eclipse.org/Vorto" target="_blank">Wiki</a></li>
                         <li><a href="community.html">Community</a></li>
+						<li><a href="http://vorto.eclipse.org/repo" target="_blank">Model Repository</a>
                     </ul>
                   </div>
 
