--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
                     <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a>
                     <div class="nav-collapse collapse navbar-responsive-collapse">
                     <ul class="nav">
-						            <li><a href="about.html">About</a></li>
+						<li><a href="about.html">About</a></li>
                         <li><a href="news.html">News</a></li>
                         <li><a href="https://github.com/eclipse/vorto/blob/master/docs/VortoUserGuide_en/vorto_user_guide_en.md" target="_blank">Documentation</a></li>
                         <li><a href="downloads.html">Downloads</a></li>
                         <li><a href="blog.html">Blog</a></li>
 						<li><a href="https://wiki.eclipse.org/Vorto" target="_blank">Wiki</a></li>
                         <li><a href="community.html">Community</a></li>
+						<li><a href="http://vorto.eclipse.org/repo" target="_blank">Model Repository</a>
                     </ul>
                   </div>
 
@@ -190,7 +191,7 @@
 
               </div>
 
-                <div class="span6"> <img src="img/RepositoryHomepage.png"></div>
+                <div class="span6"> <a href="http://vorto.eclipse.org/repo" target="_blank"><img src="img/RepositoryHomepage.png"></a></div>
 
           </div>
         </div>
