--- a/documentation/code-generators/webdevice-codegenerator.html
+++ b/documentation/code-generators/webdevice-codegenerator.html
@@ -607,7 +607,7 @@ The <strong>On</strong> status is changed to <strong>true</strong>.</li>
            <a class="twitter-timeline"  href="https://twitter.com/VortoIoT" data-widget-id="624061088770994176" nofooter noborders noheader transparent height="250">Tweets by @VortoIoT</a>
            <script>
              !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-            </script>>
+            </script>
          </div>
        </div>
    </div>
