added news about eclipse vorto talk at the eclispe conference

--- a/documentation/installation/installation.html
+++ b/documentation/installation/installation.html
@@ -484,7 +484,7 @@ Otherwise proceed with the next step.</li>
   <li>Add the <em>Vorto plug-ins repository</em> URL:<br />
 a. Click the <strong>Add…</strong> button beside the <strong>Work with</strong> field. The <strong>Add Repository</strong> dialog opens.<br />
 b. Enter a Name (optionally, e.g., <em>Vorto</em>).<br />
-c. Enter the <em>Vorto plug-ins repository</em> URL <a href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/" title="http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/">http://download.eclipse.org/vorto/update/milestones/0.4.0_M1/</a> into the <strong>Location</strong> field.<br />
+c. Enter the <em>Vorto plug-ins repository</em> URL <a href="https://eclipse.org/vorto/update/" title="https://eclipse.org/vorto/update/">https://eclipse.org/vorto/update/</a> into the <strong>Location</strong> field.<br />
 d. Click <strong>OK</strong>.</li>
 </ol>
 
