--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
  
  <div class="team">
-
+<div class="row">
      <div class="col-md-1">
             <i class="fa fa-twitter fa-4x"></i>
           </div>
@@ -445,13 +445,14 @@
 </section>
  </div>
 </div>
+</div>
 
 
 
 
  
  <div class="team">
-
+<div class="row">
      <div class="col-md-1">
             <i class="fa fa-envelope fa-4x"></i>
           </div>
@@ -465,13 +466,14 @@
 </section>
  </div>
 </div>
+</div>
 
 
 
 
  
  <div class="team">
-
+<div class="row">
      <div class="col-md-1">
             <i class="fa fa-bug fa-4x"></i>
           </div>
@@ -483,13 +485,14 @@
 </section>
  </div>
 </div>
+</div>
 
 
 
 
  
  <div class="team">
-
+<div class="row">
      <div class="col-md-1">
             <i class="fa fa-users fa-4x"></i>
           </div>
@@ -501,13 +504,14 @@
 </section>
  </div>
 </div>
+</div>
 
 
 
 
  
- <div class="team1">
-
+ <div class="team">
+<div class="row">
      <div class="col-md-1">
             <i class="fa fa-link fa-4x"></i>
           </div>
@@ -527,6 +531,7 @@ The key points are:</p>
 </ol>
 </section>
  </div>
+</div>
 </div>
 
 
