increased fade delay. Changed that menu is always visible

--- a/documentation/overview/introduction.html
+++ b/documentation/overview/introduction.html
@@ -64,7 +64,7 @@
 						</button>
 						<a class="navbar-brand" href="../../index.html">Vorto</a>
 				</div>
-				<div class="collapse navbar-collapse wow fadeIn" id="navbar-collapse" data-wow-delay="3s">
+				<div class="collapse navbar-collapse wow fadeIn" id="navbar-collapse" data-wow-delay="0.2s">
 						<ul class="nav navbar-nav pull-right">
 							
 								<li >
@@ -532,13 +532,15 @@ Vorto provides several code generators, so that the user can generate code based
   <li><a href="http://www.oracle.com/technetwork/java/javase/downloads/">Oracle Java SE 7</a>  </li>
 </ul>
 
-<table>
+<table class="table table-bordered">
+<tbody>
   <tr>
-    <td><td><i class="fa fa-info-circle info-note">
+    <td><i class="fa fa-info-circle info-note">
     <td>Validity period will endure at the most as long as the version of infrastructure software of third party manufacturers defined in this document (Operating Systems, Java, etc.) is publicly and officially supported. We support the most recent patch releases of the respective software product version.</td>
   
+ 
 
-</i></td></td></tr></table>
+</i></td></tr></tbody></table>
 
                </div>
              </div>
