added blog post and java 8 support in doc

--- a/documentation/overview/introduction.html
+++ b/documentation/overview/introduction.html
@@ -529,7 +529,7 @@ Vorto provides several code generators, so that the user can generate code based
       <li>Eclipse <a href="http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/">Xtext plug-in</a> 2.7.* (Xtext Redestributable)</li>
     </ul>
   </li>
-  <li><a href="http://www.oracle.com/technetwork/java/javase/downloads/">Oracle Java SE 7</a>  </li>
+  <li><a href="http://www.oracle.com/technetwork/java/javase/downloads/">Java 8</a>  </li>
 </ul>
 
 <table class="table table-bordered">
