--- a/documentation/editors/functionblock.html
+++ b/documentation/editors/functionblock.html
@@ -461,9 +461,9 @@
 
 <p>This section details the following topics:</p>
 
-<p><a href="#function-blocks">Function Blocks</a>  </p>
+<p><a href="#function-blocks">Function Blocks</a></p>
 
-<p><a href="#creating-a-new-function-block">Creating a New Function Block</a>  </p>
+<p><a href="#creating-a-new-function-block">Creating a New Function Block</a></p>
 
 <p><a href="#editing-a-function-block">Editing a Function Block</a></p>
 
@@ -476,12 +476,12 @@
 <p>A function block definition is typically structured as follows:</p>
 
 <ul>
-  <li><strong>Properties</strong><br />
+  <li><strong>Properties</strong>
     <ul>
-      <li>Status  </li>
-      <li>Configuration  </li>
-      <li>Fault  </li>
-      <li>Events  </li>
+      <li>Status</li>
+      <li>Configuration</li>
+      <li>Fault</li>
+      <li>Events</li>
     </ul>
   </li>
   <li><strong>Services</strong> - they represent the functional operations offered by the device.</li>
@@ -489,10 +489,10 @@
 
 <h2 id="creating-a-new-function-block">Creating a New Function Block</h2>
 
-<p><strong>Prerequisites</strong>  </p>
+<p><strong>Prerequisites</strong></p>
 
 <ul>
-  <li>You have started your IDE.  </li>
+  <li>You have started your IDE.</li>
   <li>You have selected the the Vorto perspective.</li>
 </ul>
 
